--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assest/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="assest/css/style.css">
     <title>FB_clone</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="left">
+            <img src="assest/images/android-chrome-512x512.png" alt="" srcset="">
+        </div>
+        <div class="search-bar">
+            <i class="fa fa-magnifying-glass"></i>
+            <input type="text" placeholder="Search Fb">
+        </div>
+        <div class="center">
+<i class="fa-solid fa-home"></i>
+<i class="fa-solid fa-tv"></i>
+<i class="fa-solid fa-store"></i>
+<i class="fa-solid fa-user"></i>
+        </div>
+        <div class="right">
+            <i class="fas-solid fa-list-ul"></i>
+            <i class="fas-solid fa-facebook-messenger"></i>
+            <i class="fas-solid fa-bell"></i>
+            <i class="fas-solid fa-moon"></i>
+            <img src="assest/images/" alt="" srcset="">
+        </div>
+    </nav>
 </body>
 </html>
