--- a/index.html
+++ b/index.html
@@ -1,36 +1,571 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assest/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="assest/images/favicon.ico" type="assest/images/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assest/css/style.css">
     <title>FB_clone</title>
 </head>
+
 <body>
     <nav>
         <div class="left">
-            <img src="assest/images/android-chrome-512x512.png" alt="" srcset="">
-        </div>
-        <div class="search-bar">
-            <i class="fa fa-magnifying-glass"></i>
-            <input type="text" placeholder="Search Fb">
+            <div class="logo">
+                <h2>FACEBOOK</h2>
+            </div>
+            <!-- <div class="search_bar">
+                <i class="fa fa-magnifying-glass"></i>
+                <input type="text" placeholder="Search Fb">
+            </div> -->
         </div>
         <div class="center">
-<i class="fa-solid fa-home"></i>
-<i class="fa-solid fa-tv"></i>
-<i class="fa-solid fa-store"></i>
-<i class="fa-solid fa-user"></i>
+            <!-- <i class="fa-solid fa-home"></i>
+            <i class="fa-solid fa-tv"></i>
+            <i class="fa-solid fa-store"></i>
+            <i class="fa-solid fa-user"></i> -->
+            <div class="search-bar">
+                <i class="fa fa-magnifying-glass"></i>
+<input type="text" placeholder="Search Facebook">
+            </div>
         </div>
         <div class="right">
-            <i class="fas-solid fa-list-ul"></i>
-            <i class="fas-solid fa-facebook-messenger"></i>
-            <i class="fas-solid fa-bell"></i>
-            <i class="fas-solid fa-moon"></i>
-            <img src="assest/images/" alt="" srcset="">
+            <i class="fa-brands fa-facebook-messenger"></i>
+            <i class="fa-solid fa-bell"></i>
+            <img src="assest/images/profile-main.jpg" alt="profile">
         </div>
     </nav>
+
+    <!-- main -->
+    <div class="main">
+        <!-- left -->
+        <div class="left">
+            <div class="img p-3">
+                <h3><i class="fa-solid fa-home"></i> Home</h3>
+            </div>
+            <div class="img">
+                <img src="assest/images/profile-main.jpg">
+                <p>Froze</p>
+            </div>
+            <hr>
+<!-- shortcut -->
+            <div class="img">
+                <img src="assest/images/friend.png">
+                <p>Friend</p>
+            </div>
+            <div class="img">
+                <img src="assest/images/saved.png">
+                <p>Saved</p>
+            </div>
+            <div class="img">
+                <img src="assest/images/group.png">
+                <p>Group</p>
+            </div>
+            <div class="img">
+                <img src="assest/images/marketplace.png">
+                <p>Marketplace</p>
+            </div>
+            <div class="img">
+                <img src="assest/images/watch.png">
+                <p>Watch</p>
+            </div>
+            <div class="img">
+                <img src="assest/images/down_arrow.png">
+                <p>See all</p>
+            </div>
+        
+            <hr>
+            <!-- group -->
+            <div class="img">
+                <img src="assest/images/shortcuts_1.png" alt="">
+                <p>Mobile Games</p>
+            </div>
+            <div class="img">
+                <img src="assest/images/shortcuts_4.png" alt="">
+                <p>Online Education</p>
+            </div>
+            <div class="img">
+                <img src="assest/images/shortcuts_3.webp" alt="">
+                <p>Food Lovers</p>
+            </div>
+            <div class="img p-3">        
+                <h4><i class="fa-solid fa-users"></i> See all group</h4> 
+            </div>
+            <hr>
+            <div class="img p-3">
+                <h4><i class="fa-solid fa-link"></i> See all Shortcuts</h4>
+            </div>
+        </div>
+    </div>
+    <!-- center posts -->
+    <div class="center-post">
+        <div class="story">
+            <div class="my_story_card">
+                <img src="assest/images/profile-main.jpg">
+                <div class="story_upload">
+                    <img src="assest/images/upload.png">
+                    <p class="story_tag">Create Story</p>
+                </div>
+            </div>
+            <div class="story_card">
+                <div class="story_cover"></div>
+
+                <img src="assest/images/story_1.png">
+                <div class="story_profile">
+                    <img src="assest/images/profile_1.jpg">
+                    <div class="circle"></div>
+                </div>
+                <div class="story_name">
+                    <p class="name">Nathan Hatt</p>
+                </div>
+            </div>
+            <div class="story_card">
+                <div class="story_cover"></div>
+                <img src="assest/images/story_2.jpg">
+                <div class="story_profile">
+                    <img src="assest/images/profile_5.png">
+                </div>
+                <div class="story_name">
+                    <p class="name">Sahra Tommy</p>
+                </div>
+            </div>
+            <div class="story_card">
+                <div class="story_cover"></div>
+                <img src="assest/images/story_3.jpg">
+                <div class="story_profile">
+                    <img src="assest/images/profile_3.jpg">
+                    <div class="circle"></div>
+                </div>
+                <div class="story_name">
+                    <p class="name">Mohana Grid</p>
+                </div>
+            </div>
+            <div class="story_card">
+                <div class="story_cover"></div>
+                <img src="assest/images/story_4.png">
+                <div class="story_profile">
+                    <img src="assest/images/profile_2.jpg">
+                </div>
+                <div class="story_name">
+                    <p class="name">Rona Flox</p>
+                </div>
+            </div>
+        </div>
+    <!-- story end -->
+    <div class="my_post">
+        <div class="post_top">
+            <img src="assest/images/profile-main.jpg">
+            <input type="text" placeholder="What's on your mind, Frozen?">
+        </div>
+        <hr>
+        <div class="post_bottom">
+            <div class="post_icon">
+                <i class="fa-solid fa-video red"></i>
+                <p>Live Video</p>
+            </div>
+            <div class="post_icon">
+                <i class="fa-solid fa-images green"></i>
+                <p>Photo/video</p>
+            </div>
+            <div class="post_icon">
+                <i class="fa-solid fa-face-grin yellow"></i>
+                <p>Feeling/activity</p>
+            </div>
+        </div>
+    </div>
+    <!-- my_post end-->
+    <!-- create room -->
+    <div class="room">
+        <div class="room_img">
+            <img src="assest/images/live_video.png">
+            <p>Create Room</p>
+        </div>
+        <div class="room_pf">
+            <img src="assest/images/profile_1.jpg" alt="" srcset="">
+            <img src="assest/images/profile_2.jpg" alt="" srcset="">
+            <img src="assest/images/profile_3.jpg" alt="" srcset="">
+            <img src="assest/images/profile_4.png" alt="" srcset="">
+            <img src="assest/images/profile_5.png" alt="" srcset="">
+        </div>
+    </div>
+<!-- room end -->
+<!-- newfeed -->
+<div class="fri_post">
+    <div class="fri_post_top">
+        <div class="img_n_name">
+            <img src="assest/images/profile_1.jpg" alt="" srcset="">
+        <div class="fris_name">
+            <p class="fris_name">Sam Partict</p>
+            <p class="time">3hr<i class="fas fa-user-group"></i></p>
+        </div>
+        </div>
+        <div class="menu">
+
+                <i class="fa-solid fa-ellipsis"></i>
+
+            </div>
+
+        </div>
+
+        <img src="assest/images/post_1.jpg">
+
+        <div class="info">
+
+            <div class="emoji_img">
+                <img src="assest/images/like.png">
+                <img src="assest/images/haha.png">
+                <img src="assest/images/heart.png">
+                <p>2K others</p>
+            </div>
+
+            <div class="comment">
+                <p>421 Comments</p>
+                <p>1K Shares</p>
+            </div>
+
+        </div>
+
+        <hr>
+
+        <div class="like">
+
+            <div class="like_icon">
+                <i class="fa-solid fa-thumbs-up"></i>
+                <p>Like</p>
+            </div>
+
+            <div class="like_icon">
+                <i class="fa-solid fa-message"></i>
+                <p>Comments</p>
+            </div>
+
+            <div class="like_icon">
+                <i class="fa-solid fa-share"></i>
+                <p>Share</p>
+            </div>
+
+        </div>
+
+        <div class="comment_warpper">
+
+                <img src="assest/images/profile-main.jpg">
+                <div class="circle"></div>
+
+                <div class="comment_search">
+
+                    <input type="text" placeholder="Write a comment">
+                    <i class="fa-regular fa-face-smile"></i>
+                    <i class="fa-solid fa-camera"></i>
+                    <i class="fa-regular fa-note-sticky"></i>
+
+                </div>
+
+            </div>
+
+</div>
+    <div class="fri_post">
+        <div class="fri_post_top">
+            <div class="img_n_name">
+                <img src="assest/images/profile_4.png" alt="" srcset="">
+            <div class="fris_name">
+                <p class="fris_name">Avi S</p>
+                <p class="time">3 min<i class="fas fa-globe"></i></p>
+            </div>
+            </div>
+            <div class="menu">
+
+                    <i class="fa-solid fa-ellipsis"></i>
+
+                </div>
+
+            </div>
+
+            <img src="assest/images/post_2.jpg">
+
+            <div class="info">
+
+                <div class="emoji_img">
+                    <img src="assest/images/like.png">
+                    <img src="assest/images/haha.png">
+                    <img src="assest/images/heart.png">
+                    <p>25K others</p>
+                </div>
+
+                <div class="comment">
+                    <p>421 Comments</p>
+                    <p>1.3K Shares</p>
+                </div>
+
+            </div>
+
+            <hr>
+
+            <div class="like">
+
+                <div class="like_icon">
+                    <i class="fa-solid fa-thumbs-up"></i>
+                    <p>Like</p>
+                </div>
+
+                <div class="like_icon">
+                    <i class="fa-solid fa-message"></i>
+                    <p>Comments</p>
+                </div>
+
+                <div class="like_icon">
+                    <i class="fa-solid fa-share"></i>
+                    <p>Share</p>
+                </div>
+
+            </div>
+
+            <!-- <div class="comment_warpper">
+
+                    <img src="assest/images/profile-main.jpg">
+                    <div class="circle"></div>
+
+                    <div class="comment_search">
+
+                        <input type="text" placeholder="Write a comment">
+                        <i class="fa-regular fa-face-smile"></i>
+                        <i class="fa-solid fa-camera"></i>
+                        <i class="fa-regular fa-note-sticky"></i>
+
+                    </div>
+
+                </div> -->
+
+    </div>
+    <div class="fri_post">
+        <div class="fri_post_top">
+            <div class="img_n_name">
+                <img src="assest/images/profile_3.jpg" alt="" srcset="">
+            <div class="fris_name">
+                <p class="fris_name">Sam Partict</p>
+                <p class="time">3hr<i class="fas fa-user-group"></i></p>
+            </div>
+            </div>
+            <div class="menu">
+
+                    <i class="fa-solid fa-ellipsis"></i>
+
+                </div>
+
+            </div>
+
+            <img src="assest/images/post_5.jpg">
+
+            <div class="info">
+
+                <div class="emoji_img">
+                    <img src="assest/images/like.png">
+                    <img src="assest/images/haha.png">
+                    <img src="assest/images/heart.png">
+                    <p>25K others</p>
+                </div>
+
+                <div class="comment">
+                    <p>421 Comments</p>
+                    <p>1.3K Shares</p>
+                </div>
+
+            </div>
+
+            <hr>
+
+            <div class="like">
+
+                <div class="like_icon">
+                    <i class="fa-solid fa-thumbs-up"></i>
+                    <p>Like</p>
+                </div>
+
+                <div class="like_icon">
+                    <i class="fa-solid fa-message"></i>
+                    <p>Comments</p>
+                </div>
+
+                <div class="like_icon">
+                    <i class="fa-solid fa-share"></i>
+                    <p>Share</p>
+                </div>
+
+            </div>
+
+            <!-- <div class="comment_warpper">
+
+                    <img src="assest/images/profile-main.jpg">
+                    <div class="circle"></div>
+
+                    <div class="comment_search">
+
+                        <input type="text" placeholder="Write a comment">
+                        <i class="fa-regular fa-face-smile"></i>
+                        <i class="fa-solid fa-camera"></i>
+                        <i class="fa-regular fa-note-sticky"></i>
+
+                    </div>
+
+                </div> -->
+
+    </div>
+    <div class="fri_post">
+        <div class="fri_post_top">
+            <div class="img_n_name">
+                <img src="assest/images/profile_12.jpg" alt="" srcset="">
+            <div class="fris_name">
+                <p class="fris_name">Sam Partict</p>
+                <p class="time">3hr<i class="fas fa-user-group"></i></p>
+            </div>
+            </div>
+            <div class="menu">
+
+                    <i class="fa-solid fa-ellipsis"></i>
+
+                </div>
+
+            </div>
+
+            <img src="assest/images/post_7.jpg">
+
+            <div class="info">
+
+                <div class="emoji_img">
+                    <img src="assest/images/like.png">
+                    <img src="assest/images/haha.png">
+                    <img src="assest/images/heart.png">
+                    <p>25K others</p>
+                </div>
+
+                <div class="comment">
+                    <p>421 Comments</p>
+                    <p>1.3K Shares</p>
+                </div>
+
+            </div>
+
+            <hr>
+
+            <div class="like">
+
+                <div class="like_icon">
+                    <i class="fa-solid fa-thumbs-up activi"></i>
+                    <p>Like</p>
+                </div>
+
+                <div class="like_icon">
+                    <i class="fa-solid fa-message"></i>
+                    <p>Comments</p>
+                </div>
+
+                <div class="like_icon">
+                    <i class="fa-solid fa-share"></i>
+                    <p>Share</p>
+                </div>
+
+            </div>
+
+            <!-- <div class="comment_warpper">
+
+                    <img src="assest/images/profile-main.jpg">
+                    <div class="circle"></div>
+
+                    <div class="comment_search">
+
+                        <input type="text" placeholder="Write a comment">
+                        <i class="fa-regular fa-face-smile"></i>
+                        <i class="fa-solid fa-camera"></i>
+                        <i class="fa-regular fa-note-sticky"></i>
+
+                    </div>
+
+                </div> -->
+
+    </div>
+    <div class="fri_post">
+        <div class="fri_post_top">
+            <div class="img_n_name">
+                <img src="assest/images/profile_2.jpg" alt="" srcset="">
+            <div class="fris_name">
+                <p class="fris_name">Sam Partict</p>
+                <p class="time">3hr<i class="fas fa-user-group"></i></p>
+            </div>
+            </div>
+            <div class="menu">
+
+                    <i class="fa-solid fa-ellipsis"></i>
+
+                </div>
+
+            </div>
+
+            <img src="assest/images/post_6.jpg">
+
+            <div class="info">
+
+                <div class="emoji_img">
+                    <img src="assest/images/like.png">
+                    <img src="assest/images/haha.png">
+                    <img src="assest/images/heart.png">
+                    <p>25K others</p>
+                </div>
+
+                <div class="comment">
+                    <p>421 Comments</p>
+                    <p>1.3K Shares</p>
+                </div>
+
+            </div>
+
+            <hr>
+
+            <div class="like">
+
+                <div class="like_icon">
+                    <i class="fa-solid fa-thumbs-up activi"></i>
+                    <p>Like</p>
+                </div>
+
+                <div class="like_icon">
+                    <i class="fa-solid fa-message"></i>
+                    <p>Comments</p>
+                </div>
+
+                <div class="like_icon">
+                    <i class="fa-solid fa-share"></i>
+                    <p>Share</p>
+                </div>
+
+            </div>
+
+            <!-- <div class="comment_warpper">
+
+                    <img src="assest/images/profile-main.jpg">
+                    <div class="circle"></div>
+
+                    <div class="comment_search">
+
+                        <input type="text" placeholder="Write a comment">
+                        <i class="fa-regular fa-face-smile"></i>
+                        <i class="fa-solid fa-camera"></i>
+                        <i class="fa-regular fa-note-sticky"></i>
+
+                    </div>
+
+                </div> -->
+
+    </div>
+</div>
+</div>
+</div>
+
+    <!-- center posts -->
+    <!-- main end -->
 </body>
+
 </html>
